--- a/gui/public/index.html
+++ b/gui/public/index.html
@@ -21,14 +21,15 @@
 			</nav>
 		</header>
 			<div>
-				<form action="home.html" method="get">
+				<form action="login" method="post">
 					<legend>Login</legend>
 					<div class="mb-3">
 						<input type="text" class="form-control" name="username" placeholder="Username" required>
 					</div>
 					<div class="mb-3">
 						<input type="password" class="form-control" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
-						<div id="passwordHelp" class="form-text">Must contain at least one letter and one number</div>
+						<div class="form-text">Must contain at least one letter and one number</div>
+						<div class="form-text">Guest login is guest and guest1</div>
 					</div>
 					<button type="submit" class="btn btn-primary">Login</button>
 				</form>
