--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -25,8 +25,8 @@
 					</div>
 				</button>
 				<div class="flex-fill"></div>
-				<form class="d-flex" role="search">
-					<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+				<form class="d-flex" onsubmit="event.preventDefault();search(event);">
+					<input class="form-control me-2" type="text" placeholder="Search">
 					<button id="search-btn" class="btn btn-primary" type="submit">
 						<div class="center-y">
 							<svg width="20" height="20" class="bi bi-search" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -35,6 +35,9 @@
 						</div>
 					</button>
 				</form>
+				<div style="margin: 0 0 0 0.4rem;" title="Check for backend subfolder search">
+					<input type="checkbox" id="subfolder-search">
+				</div>
 				<a class="navbar-brand" href="">
 					<img src="images/file-browser-icon.png" />
 				</a>
