Added backend placeholder for search and URL to download single option now

--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -57,8 +57,7 @@
 							<li class="dropdown-item">Upload Folder</li>
 							<li class="dropdown-item">Upload files</li>
 							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">URL to file</li>
-							<li class="dropdown-item">URL to folder</li>
+							<li class="dropdown-item">URL to download</li>
 						</ul>
 					</div>
 				<div>
