--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -57,7 +57,7 @@
 							<li class="dropdown-item">Upload Folder</li>
 							<li class="dropdown-item">Upload files</li>
 							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">URL to download</li>
+							<li class="dropdown-item" onclick="downloadURLInput(event)">URL to download</li>
 						</ul>
 					</div>
 				<div>
