--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -27,7 +27,7 @@
 				<div class="flex-fill"></div>
 				<form class="d-flex" onsubmit="event.preventDefault();search(event);">
 					<input class="form-control me-2" type="text" placeholder="Search">
-					<button id="search-btn" class="btn btn-primary" type="submit">
+					<button class="btn btn-primary" style="padding: 0 0.2rem 0 0.2rem" type="submit">
 						<div class="center-y">
 							<svg width="20" height="20" class="bi bi-search" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 								<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
@@ -35,7 +35,13 @@
 						</div>
 					</button>
 				</form>
-				<div style="margin: 0 0 0 0.4rem;" title="Check for backend subfolder search">
+				<div class="flex-c center-y" style="margin: 0 0 0 0.4rem;" title="Check for backend subfolder search">
+					<div style="margin:0 0 0.2rem 0;">
+						<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" style="fill:#0d6efd;">
+							<path d="M64 32C64 14.3 49.7 0 32 0S0 14.3 0 32v96V384c0 35.3 28.7 64 64 64H256V384H64V160H256V96H64V32zM288 192c0 17.7 14.3 32 32 32H544c17.7 0 32-14.3 32-32V64c0-17.7-14.3-32-32-32H445.3c-8.5 0-16.6-3.4-22.6-9.4L409.4 9.4c-6-6-14.1-9.4-22.6-9.4H320c-17.7 0-32 14.3-32 32V192zm0 288c0 17.7 14.3 32 32 32H544c17.7 0 32-14.3 32-32V352c0-17.7-14.3-32-32-32H445.3c-8.5 0-16.6-3.4-22.6-9.4l-13.3-13.3c-6-6-14.1-9.4-22.6-9.4H320c-17.7 0-32 14.3-32 32V480z">
+							</path>
+						</svg>
+					</div>
 					<input type="checkbox" id="subfolder-search">
 				</div>
 				<a class="navbar-brand" href="">
