Add symbolic link and pathNavBtn fn and other tweaks

--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -60,7 +60,7 @@
 							<li class="dropdown-item" onclick="createFolder(event)">New folder</li>
 							<li class="dropdown-item" onclick="createTextFile(event)">New text file</li>
 							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">Upload Folder</li>
+							<li class="dropdown-item">Upload folder</li>
 							<li class="dropdown-item">Upload files</li>
 							<li><hr class="dropdown-divider"></li>
 							<li class="dropdown-item" onclick="downloadURL(event)">URL to download</li>
@@ -114,9 +114,9 @@
 									<li class="dropdown-item" onclick="rename(event)">Rename</li>
 									<li class="dropdown-item" onclick="createLink(event)">Create link</li>
 									<li><hr class="dropdown-divider"></li>
-									<li class="dropdown-item">Move</li>
-									<li class="dropdown-item">Copy</li>
-									<li class="dropdown-item">Symbolic link</li>
+									<li class="dropdown-item" onclick="move(event)">Move</li>
+									<li class="dropdown-item" onclick="copy(event)">Copy</li>
+									<li class="dropdown-item" onclick="symbolicLink(event)">Symbolic link</li>
 									<li><hr class="dropdown-divider"></li>
 									<li class="dropdown-item">Trash</li>
 									<li class="dropdown-item">Delete</li>
