--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -91,7 +91,7 @@
 			</div>
 			<div class="files">
 				<div class="flex-c">
-					<div class="flex-r">
+					<div class="flex-r" style="margin: 0 0 0.3rem 0;">
 						<div id="dropdowns" class="flex-r">
 							<div class="dropdown">
 								<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
