--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -134,7 +134,7 @@
 				<table class="table table-hover">
 					<thead>
 						<tr>
-							<td><input type="checkbox" onclick="addAllSelected(this)"></td>
+							<td><input type="checkbox" onclick="selectAll(this)"></td>
 							<th>Icon</th>
 							<th id="filename">Name</th>
 							<th id="modifiedDate">Modified Date</th>
