--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -60,8 +60,7 @@
 							<li class="dropdown-item" onclick="createFolder(event)">New folder</li>
 							<li class="dropdown-item" onclick="createTextFile(event)">New text file</li>
 							<li><hr class="dropdown-divider"></li>
-							<li class="dropdown-item">Upload folder</li>
-							<li class="dropdown-item">Upload files</li>
+							<li class="dropdown-item" onclick="upload(event)">Upload</li>
 							<li><hr class="dropdown-divider"></li>
 							<li class="dropdown-item" onclick="downloadURL(event)">URL to download</li>
 						</ul>
@@ -72,10 +71,10 @@
 					</a>
 				</div>
 				<div>
-					<button class="btn">Shared</button>
+					<button class="btn" onclick="shared(event)">Shared</button>
 				</div>
 				<div>
-					<button class="btn">Trash</button>
+					<button class="btn" onclick="trash(event)">Trash</button>
 				</div>
 				<div>
 					<a href="about.html">
