--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -9,7 +9,9 @@
 		<link href="css/base.css" rel="stylesheet">
 		<link href="css/home.css" rel="stylesheet">
 		<script src="js/jquery-3.7.1.js"></script>
+		<script src="js/jslib-dom.js"></script>
 		<script src="js/utils.js"></script>
+		<script src="js/components.js"></script>
 		<script src="js/selection.js"></script>
 		<script src="js/files.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
