--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -28,7 +28,7 @@
 					</div>
 				</button>
 				<div class="flex-fill"></div>
-				<form class="d-flex" onsubmit="event.preventDefault();search(event);">
+				<form for="search" class="d-flex" onsubmit="event.preventDefault(); search(event);">
 					<input class="form-control me-2" type="text" placeholder="Search">
 					<button class="btn btn-primary" style="padding: 0 0.2rem 0 0.2rem" type="submit">
 						<div class="center-y">
