--- a/gui/public/index.html
+++ b/gui/public/index.html
@@ -24,10 +24,10 @@
 				<form action="login" method="post" onsubmit="localStorage.setItem('user', this.parentNode.querySelector('input').value)">
 					<legend>Login</legend>
 					<div class="mb-3">
-						<input type="text" class="form-control" name="username" placeholder="Username" required>
+						<input type="text" class="form-control" name="username" placeholder="Username" required autocomplete="username">
 					</div>
 					<div class="mb-3">
-						<input type="password" class="form-control" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$">
+						<input type="password" class="form-control" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$" autocomplete="current-password">
 						<div class="form-text">Must contain at least one letter and one number</div>
 						<div class="form-text">Guest login is guest and guest1</div>
 					</div>
