--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -13,7 +13,8 @@
 		<script src="js/utils.js"></script>
 		<script src="js/components.js"></script>
 		<script src="js/selection.js"></script>
-		<script src="js/files.js"></script>
+		<script src="js/file-actions.js"></script>
+		<script src="js/base.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</head>
@@ -74,10 +75,10 @@
 					</a>
 				</div>
 				<div>
-					<button class="btn" onclick="shared(event)">Shared</button>
+					<button class="btn" onclick="opeShared(event)">Shared</button>
 				</div>
 				<div>
-					<button class="btn" onclick="trash(event)">Trash</button>
+					<button class="btn" onclick="openTrash(event)">Trash</button>
 				</div>
 				<div>
 					<a href="about.html">
@@ -120,8 +121,8 @@
 									<li class="dropdown-item" onclick="copy(event)">Copy</li>
 									<li class="dropdown-item" onclick="symbolicLink(event)">Symbolic link</li>
 									<li><hr class="dropdown-divider"></li>
-									<li class="dropdown-item">Trash</li>
-									<li class="dropdown-item">Delete</li>
+									<li class="dropdown-item" onclick="trash(event)">Trash</li>
+									<li class="dropdown-item" onclick="del(event)">Delete</li>
 									<li><hr class="dropdown-divider"></li>
 									<li class="dropdown-item">Details</li>
 								</ul>
