--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -29,16 +29,16 @@
 					</div>
 				</button>
 				<div class="flex-fill"></div>
-				<form for="search" class="d-flex" onsubmit="event.preventDefault(); search(event);">
-					<input class="form-control me-2" type="text" placeholder="Search">
-					<button class="btn btn-primary" style="padding: 0 0.2rem 0 0.2rem" type="submit">
+				<div class="flex-r">
+					<input class="form-control me-2" type="text" placeholder="Search" onchange="search(event.target)">
+					<button class="btn btn-primary" style="padding: 0 0.2rem 0 0.2rem"  onclick="search(event.target.parentNode.querySelector('input'))">
 						<div class="center-y">
 							<svg width="20" height="20" class="bi bi-search" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 								<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"></path>
 							</svg>
 						</div>
 					</button>
-				</form>
+				</div>
 				<div class="flex-c center-y" style="margin: 0 0 0 0.4rem;" title="Subfolder search (backend)">
 					<div style="margin:0 0 0.2rem 0;">
 						<svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512" style="fill:#0d6efd;">
