--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -91,6 +91,7 @@
 					</a>
 				</div>
 				<div id="file-count" class="btn">File count: 3</div>
+				<div class="btn" onclick="getJoke(event)">Need a joke?</div>
 			</div>
 			<div class="files">
 				<div class="flex-c">
