--- a/gui/public/index.html
+++ b/gui/public/index.html
@@ -29,7 +29,7 @@
 					<div class="mb-3">
 						<input type="password" class="form-control" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$" autocomplete="current-password">
 						<div class="form-text">Must contain at least one letter and one number</div>
-						<div class="form-text">Guest login is guest and guest1</div>
+						<div class="form-text">Guest login is <b>guest</b> and <b>2bemyguestlogin</b></div>
 					</div>
 					<button type="submit" class="btn btn-primary">Login</button>
 				</form>
