Basic cookie implemented and routes redone for security

--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -70,7 +70,7 @@
 						</ul>
 					</div>
 				<div>
-					<a href="home.html">
+					<a href="/home">
 						<button class="btn">Home</button>
 					</a>
 				</div>
@@ -81,12 +81,12 @@
 					<button class="btn" onclick="openTrash(event)">Trash</button>
 				</div>
 				<div>
-					<a href="about.html">
+					<a href="/about">
 						<button class="btn">About page</button>
 					</a>
 				</div>
 				<div>
-					<a href="index.html">
+					<a href="/">
 						<button class="btn">Log out</button>
 					</a>
 				</div>
