--- a/gui/public/about.html
+++ b/gui/public/about.html
@@ -44,7 +44,7 @@
 						</ul>
 					</div>
 				<div>
-					<a href="home.html">
+					<a href="/home">
 						<button class="btn">Home</button>
 					</a>
 				</div>
@@ -55,12 +55,12 @@
 					<button class="btn">Trash</button>
 				</div>
 				<div>
-					<a href="about.html">
+					<a href="/about">
 						<button class="btn">About page</button>
 					</a>
 				</div>
 				<div>
-					<a href="index.html">
+					<a href="/">
 						<button class="btn">Log out</button>
 					</a>
 				</div>
