--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -15,8 +15,9 @@
 		<script src="js/selection.js"></script>
 		<script src="js/file-actions.js"></script>
 		<script src="js/base.js"></script>
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+		<script src="js/logout.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
@@ -86,9 +87,7 @@
 					</a>
 				</div>
 				<div>
-					<a href="/">
-						<button class="btn">Log out</button>
-					</a>
+					<button class="btn" onclick="logout(event)">Log out</button>
 				</div>
 				<div id="file-count" class="btn">File count: 3</div>
 				<div class="btn" onclick="getJoke(event)">Need a joke?</div>
