--- a/gui/public/login.html
+++ b/gui/public/login.html
@@ -7,8 +7,9 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link href="css/main.css" rel="stylesheet">
 		<link href="css/login.css" rel="stylesheet">
-		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+		<script src="js/login.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
@@ -21,17 +22,22 @@
 			</nav>
 		</header>
 			<div>
-				<form action="login" method="post" onsubmit="localStorage.setItem('user', this.parentNode.querySelector('input').value)">
+				<!-- <form action="login" method="post" onsubmit="localStorage.setItem('user', this.parentNode.querySelector('input').value)"> -->
+				<form action="login" method="post" onsubmit="handleFormSubmit(event)">
 					<legend>Login</legend>
-					<div class="mb-3">
+					<div class="mb-2">
 						<input type="text" class="form-control" name="username" placeholder="Username" required autocomplete="username">
 					</div>
-					<div class="mb-3">
+					<div class="mb-2">
 						<input type="password" class="form-control" name="password" placeholder="Password" required pattern="^(?=.*[a-zA-Z])(?=.*\d).+$" autocomplete="current-password">
-						<div class="form-text">Must contain at least one letter and one number</div>
+						<div class="form-text">Must contain at least <b>one letter</b> and <b>one number</b></div>
 						<div class="form-text">Guest login is <b>guest</b> and <b>2bemyguestlogin</b></div>
 					</div>
-					<button type="submit" class="btn btn-primary">Login</button>
+					<div class="flex-r">
+						<button type="submit" class="btn btn-primary">Login</button>
+						<input style="margin: 0.3rem;" type="checkbox" id="createUserCheckbox">
+						<div class="center-y">Create new user</div>
+					</div>
 				</form>
 			</div>
 		<footer>
