--- a/gui/public/home.html
+++ b/gui/public/home.html
@@ -59,7 +59,7 @@
 		<div>
 			<div class="menu">
 				<div>
-					<div id="connectionStatus" class="btn btn-danger">Disconnected</div>
+					<div id="connectionStatus" class="btn btn-danger" onclick="connectWebSocket()">Reconnect</div>
 				</div>
 					<div class="dropdown">
 						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Add New</button>
