--- a/gui/public/about.html
+++ b/gui/public/about.html
@@ -13,7 +13,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	</head>
-	<body>
+	<body id="body">
 		<header>
 			<nav class="navbar bg-body-tertiary">
 				<button class="btn btn-primary navbar-brand" onclick='s=document.querySelector("body > div > div.menu").style;s.display===""?s.display="none":s.display="";'>
@@ -26,34 +26,19 @@
 				<a class="navbar-brand" href="">About page</a>
 				<div class="flex-fill"></div>
 				<a class="navbar-brand" href="">
-					<img src="images/file-browser-icon.png" />
+					<img style="width: 2.5rem" src="/images/file-browser-icon.png" />
 				</a>
 			</nav>
 		</header>
-		<div>
-			<div class="menu">
+		<div id="content">
+			<div id="menu">
 				<div>
 					<div id="connectionStatus" class="btn btn-danger" onclick="connectWebSocket()">Reconnect</div>
 				</div>
-					<div class="dropdown">
-						<button class="btn nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Add New</button>
-						<ul class="dropdown-menu">
-							<li><a class="dropdown-item" href="#">Action</a></li>
-							<li><a class="dropdown-item" href="#">Another action</a></li>
-							<li><hr class="dropdown-divider"></li>
-							<li><a class="dropdown-item" href="#">Something else here</a></li>
-						</ul>
-					</div>
 				<div>
 					<a href="/home">
 						<button class="btn">Home</button>
 					</a>
-				</div>
-				<div>
-					<button class="btn">Shared</button>
-				</div>
-				<div>
-					<button class="btn">Trash</button>
 				</div>
 				<div>
 					<a href="/about">
