--- a/gui/public/login.html
+++ b/gui/public/login.html
@@ -22,26 +22,26 @@
 				</a>
 			</nav>
 		</header>
-			<div>
-				<form action="login" method="post" onsubmit="handleFormSubmit(event)">
-					<legend>Login</legend>
-					<div class="mb-2">
-						<input type="text" class="form-control" name="username" placeholder="Username" required autocomplete="username" minlength="2" maxlength="30" />
+		<div id="content">
+			<form action="login" method="post" onsubmit="handleFormSubmit(event)">
+				<legend>Login</legend>
+				<div class="mb-2">
+					<input type="text" class="form-control" name="username" placeholder="Username" required autocomplete="username" minlength="2" maxlength="30" />
+				</div>
+				<div class="mb-2">
+					<input type="password" class="form-control" name="password" placeholder="Password" required autocomplete="current-password" pattern="^(?=.*[a-zA-Z])(?=.*\d).+$" minlength="5" maxlength="30" />
+					<div class="form-text">Must contain at least <b>one letter</b> and <b>one number</b></div>
+					<div class="form-text">Guest login is <b>guest</b> and <b>2bemyguestlogin</b></div>
+				</div>
+				<div class="flex-r">
+					<button type="submit" class="btn btn-primary">Login</button>
+					<div class="center-y" style="margin: 0.3rem;">
+						<input type="checkbox" id="create-user-checkbox" />
 					</div>
-					<div class="mb-2">
-						<input type="password" class="form-control" name="password" placeholder="Password" required autocomplete="current-password" pattern="^(?=.*[a-zA-Z])(?=.*\d).+$" minlength="5" maxlength="30" />
-						<div class="form-text">Must contain at least <b>one letter</b> and <b>one number</b></div>
-						<div class="form-text">Guest login is <b>guest</b> and <b>2bemyguestlogin</b></div>
-					</div>
-					<div class="flex-r">
-						<button type="submit" class="btn btn-primary">Login</button>
-						<div class="center-y" style="margin: 0.3rem;">
-							<input type="checkbox" id="createUserCheckbox" />
-						</div>
-						<div class="center-y">Create new user</div>
-					</div>
-				</form>
-			</div>
+					<div class="center-y">Create new user</div>
+				</div>
+			</form>
+		</div>
 		<footer>
 			<div>David Bauch</div>
 			<a href="https://github.com/bauchdj/startup-file-browser-web-app/">GitHub</a>
