--- a/gui/public/login.html
+++ b/gui/public/login.html
@@ -8,17 +8,18 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link href="/css/main.css" rel="stylesheet">
 		<link href="/css/login.css" rel="stylesheet">
-		<script src=/"js/login.js"></script>
+		<script src="/js/login.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 	</head>
 	<body>
+	<div id="body">
 		<header>
 			<nav class="navbar bg-body-tertiary">
 				<a class="navbar-brand" href="">Login page</a>
 				<div class="flex-fill"></div>
 				<a class="navbar-brand" href="">
-					<img src="images/file-browser-icon.png" />
+					<img style="width: 2.5rem" src="/images/file-browser-icon.png" />
 				</a>
 			</nav>
 		</header>
@@ -46,5 +47,6 @@
 			<div>David Bauch</div>
 			<a href="https://github.com/bauchdj/startup-file-browser-web-app/">GitHub</a>
 		</footer>
+	</div>
 	</body>
 </html>
